@@ -11,6 +11,7 @@ Version 2.0.0 - SVN
  - Added some security improvements to runguard.
  - Drop dependency on tempfile during distclean.
  - Fix compile errors/warnings in beep.c and compare.c (Closes: #1754218).
+ - Improve runssh_* robustness.
 
 Version 2.0.0 Release Candidate 2 - 25 June 2007
 ------------------------------------------------
